--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weeekly나무百科中文版</title>
+    <title>TDX 台灣旅遊景點導覽</title>
     <link
       rel="preload"
       href="/font/Inter-roman.var.woff2"
